--- a/ios/teethBrushing/Info.plist
+++ b/ios/teethBrushing/Info.plist
@@ -1,6 +1,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow teethBrushing to use the camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow teethBrushing to use the microphone</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -54,7 +58,5 @@
 	<false/>
   <key>UIStatusBarStyle</key>
   <string>UIStatusBarStyleDefault</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow teethBrushing to use the camera</string>
 </dict>
 </plist>
