--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-countdown-circle-timer": "^2.3.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "^0.10.1",
     "react-native-web": "~0.11.7"
   },
@@ -29,6 +31,7 @@
     "@types/react-native": "~0.61.23",
     "babel-preset-expo": "~8.2.0",
     "jest-expo": "~38.0.0",
+    "prettier": "^2.0.5",
     "typescript": "~3.9.5"
   },
   "jest": {
